--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-codemirror2",
-  "version": "7.2.1",
+  "name": "@dvargas92495/react-codemirror2",
+  "version": "7.2.2",
   "description": "a tiny react codemirror component wrapper",
   "main": "index.js",
   "typings": "index.d.ts",
@@ -54,7 +54,7 @@
   ],
   "peerDependencies": {
     "codemirror": "5.x",
-    "react": ">=15.5 <=17.x"
+    "react": ">=17.x"
   },
   "devDependencies": {
     "@babel/preset-env": "7.10.1",
