--- a/package.json
+++ b/package.json
@@ -88,13 +88,13 @@
     "react-test-renderer": "16.13.1",
     "redux": "4.0.5",
     "rimraf": "3.0.2",
-    "sass-loader": "8.0.2",
+    "sass-loader": "^13.0.0",
     "sinon": "9.0.2",
     "style-loader": "1.2.1",
     "ts-jest": "26.0.0",
     "typescript": "3.9.3",
     "typescript-formatter": "7.2.2",
-    "webpack": "4.43.0",
+    "webpack": "^5.72.1",
     "webpack-cli": "3.3.11"
   }
 }
